@@ -1,3 +1,7 @@
+2015-10-14  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* lib/opengl.rb: Now tries to find C Edition.
+
 2015-10-13  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* Updated using latest gl.xml.
